@@ -28,7 +28,7 @@ class ProductServiceTest {
 
     private RestClient restClient;
 
-    private ServiceUrlConfig serviceUrlConfig;
+    private ServiceUrl-Config serviceUrlConfig;
 
     private ProductService productService;
 
@@ -82,7 +82,7 @@ class ProductServiceTest {
         List<ProductVm> result = productService.getProductByIds(ids);
 
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().id()).isEqualTo(1);
+        assertThat(result.get(0).id()).isEqualTo(1);
 
     }
 
@@ -117,7 +117,7 @@ class ProductServiceTest {
         List<CategoryGetVm> result = productService.getCategoryByIds(ids);
 
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().id()).isEqualTo(2);
+        assertThat(result.get(0).id()).isEqualTo(2);
     }
 
     @Test
@@ -151,7 +151,7 @@ class ProductServiceTest {
         List<BrandVm> result = productService.getBrandByIds(ids);
 
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().id()).isEqualTo(3);
+        assertThat(result.get(0).id()).isEqualTo(3);
     }
 
     private MultiValueMap<String, String> createIdParams(List<Long> ids) {
